--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
            </button>
            <div class="collapse navbar-collapse" id="navContent">
                 <ul class="navbar-nav">
-                    <li class="navbar-item"><a href="#" class="nav-link">Link 1</a></li>
-                    <li class="navbar-item"><a href="#" class="nav-link">Link 2</a></li>
-                    <li class="navbar-item"><a href="#" class="nav-link">Link 3</a></li>
+                    <li class="navbar-item"><a href="index.html" class="nav-link">Home</a></li>
+                    <li class="navbar-item"><a href="about.html" class="nav-link">About</a></li>
+                    <li class="navbar-item"><a href="portfolio.html" class="nav-link">Contacts</a></li>
                 </ul>
             </div>
         </nav> 
