--- a/index.html
+++ b/index.html
@@ -7,11 +7,6 @@
     <title>My resume</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"/>
     <link rel="stylesheet" href="style.css"/>
-    <style>
-        p:hover {
-            color:lightblue
-        }    
-    </style>
 </head>
 
 <body>
@@ -35,10 +30,10 @@
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Dropdown link
+                      Downloads
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
+                      <li><a class="dropdown-item"  href="resume.pdf" target="_blank">Resume</a></li>
                       <li><a class="dropdown-item" href="#">Another action</a></li>
                       <li><a class="dropdown-item" href="#">Something else here</a></li>
                     </ul>
@@ -60,6 +55,8 @@
         <br>
         <div class="container-fluid">
             <h2>Professional Bio</h2>
+                <br>
+                <br>
                 <p>I grew up in Salt Lake City, UT. I started my working career in the medical field at Shriners Hospital for Children. I recieved a CNA license and worked on the orthopedic unit for two years. I really enjoyed my time at Shriners, but I was ready for change. I moved to Denver, CO and started working at Done Service Group as a plumber apprecntice. It is a good field and honest way to make a living. I just couldn't see myself making a life long career out of it. I moved back to UT, and I now work at UPS. I'm at a point in my life where I am ready to dedicate my time to schooling in order to start a career in the Information Technology Field.</p>
         </div>
             <br>
