--- a/portfolio.html
+++ b/portfolio.html
@@ -3,13 +3,17 @@
 
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>My resume</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css"/>
     <style>
-        a:hover {
-            color:red;
+        label {
+            padding: 1em;
+        }
+        textarea {
+            color: grey;
+            background-color: aliceblue;
         }
     </style>
 </head>
@@ -35,10 +39,10 @@
                   </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Dropdown link
+                      Downloads
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
+                      <li><a class="dropdown-item" href="resume.pdf" target="_blank">Resume</a></li>
                       <li><a class="dropdown-item" href="#">Another action</a></li>
                       <li><a class="dropdown-item" href="#">Something else here</a></li>
                     </ul>
@@ -47,7 +51,7 @@
               </div>
             </div>
           </nav>
-    
+    <!--Header and Image-->
     <header class="container">
         <div class="row">
             <div class="col-12">
@@ -60,8 +64,9 @@
         <br/>
     
         <!--I need to add the action attribute in the form tag in future after learning more about PHP and CSS-->
-        <div class="container-fluid">
+        <div class="container-fluid" id="form">
             <div class="row">
+                <div class="col">
                 <form action="" method= "get" target= "_blank" id="form1">
                     <div>
                         <label for= "name">Name:</label>
@@ -98,42 +103,45 @@
                         <input type= "submit" value= "Submit" id="submit1"/>
                     </div>
                 </form>
+                </div>
             </div>
         </div>
-        <h2>References</h2>
+            <br>
+            <br>
+        <div class="container-fluid">
+                <h2 style="margin-left: 1.45em">References</h2>
+                <table id="table">
+                    <tr>
+                        <th>Name</th>
+                        <th>Phone Number</th>
+                        <th>Relationship</th>
+                    </tr>
 
-        <table>
-            <tr>
-                <th>Name</th>
-                <th>Phone Number</th>
-                <th>Relationship</th>
-            </tr>
+                    <tr>
+                        <td>Marshay Blair</td>
+                        <td>(801)915-0947</td>
+                        <td>Wife</td>
+                    </tr>
 
-            <tr>
-                <td>Marshay Blair</td>
-                <td>(801)915-0947</td>
-                <td>Wife</td>
-            </tr>
+                    <tr>
+                        <td>Larry Grossaint</td>
+                        <td>(801)734-0006</td>
+                        <td>Friend</td>
+                    </tr>
 
-            <tr>
-                <td>Larry Grossaint</td>
-                <td>(801)734-0006</td>
-                <td>Friend</td>
-            </tr>
+                    <tr>
+                        <td>Ecquadee Anderson</td>
+                        <td>(801)879-4721</td>
+                        <td>Friend</td>
+                    </tr>
 
-            <tr>
-                <td>Ecquadee Anderson</td>
-                <td>(801)879-4721</td>
-                <td>Friend</td>
-            </tr>
-
-            <tr>
-                <td>Natalia Myerhoffer</td>
-                <td>(385)243-8601</td>
-                <td>Friend</td>
-            </tr>
-        </table>
-
+                    <tr>
+                        <td>Natalia Myerhoffer</td>
+                        <td>(385)243-8601</td>
+                        <td>Friend</td>
+                    </tr>
+                </table>
+            </div>
         <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
