Still trying to make site Responsive. Also cleaned up code and touched the details

--- a/index.html
+++ b/index.html
@@ -43,22 +43,20 @@
             </div>
           </nav>
         <!--Header with image-->
-    <header class= "container">
-        <div class="row-col-12">
+    <header class= "container" id="img1">
+        <!--<div class="row-col-12">-->
             <h1>Aaron Blair</h1>
-         </div>     
+        <!--</div>-->     
             
     </header>
         
         <br>
         <br>
-        <div class="container-fluid">
-          <div class="row-col-6">
+        <div class="container-row-8">
             <h2>Professional Bio</h2>
                 <br>
                 <br>
                 <p>I grew up in Salt Lake City, UT. I started my working career in the medical field at Shriners Hospital for Children. I recieved a CNA license and worked on the orthopedic unit for two years. I really enjoyed my time at Shriners, but I was ready for change. I moved to Denver, CO and started working at Done Service Group as a plumber apprecntice. It is a good field and honest way to make a living. I just couldn't see myself making a life long career out of it. I moved back to UT, and I now work at UPS. I'm at a point in my life where I am ready to dedicate my time to schooling in order to start a career in the Information Technology Field.</p>
-          </div>
         </div>
             <br>
             <br>
