--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,7 @@
         }
         textarea {
             color: grey;
-            background-color: aliceblue;
+            background-color: whitesmoke;
         }
     </style>
 </head>
@@ -52,12 +52,9 @@
             </div>
           </nav>
     <!--Header and Image-->
-    <header class="container">
+    <header class="container" id="img1">
         <div class="row">
-            <div class="col-12">
-                <img class="imageright1 image-fluid float-end" src="images/Wilderness_photo.jpeg" alt="Wilderness Scene"/>
-                <h1 style= "padding-left:150px">Contacts</h1>
-            </div>
+            <h1>Contacts</h1>
         </div>
     </header>
         <br/>
