Cleaned code and make responsive

--- a/about.html
+++ b/about.html
@@ -60,10 +60,8 @@
         </div>
     </header>
         
-            <br>
-        <div class="container-fluid">
+        <div class="container">
             <h2>Personal Bio</h2>
-                <br>
                 <p>
                 I grew up in West Jordan, UT. My father was an avid snake collector and breeder. At one pointe he had the largest snake collection in the United States. My job was to help keep the cages clean and the water bowls full. When I look back all I remember is snakes and basketball. I absolutely loved it; I studied the different species and soaked in all the information I could. When I wasn't working in the snake room I was playing basketball with friends. In my teenage years my interest in snakes fadded, and my love for basketball grew stronger.<br/>
                  Once I graduated High School I landed a job at Shriners Hospital for Children. It was one of the best 
@@ -72,36 +70,40 @@
                 </p>
         </div>
         <!--Education and Work History-->
-        <div class="container-fluid">
-            <h2 id="education;" style="margin-top: 10vh">Education</h2>
-                <br>
-                <ul>
+        <div class="container">
+          <div class="row">
+            <div class="col">
+            <h2 id="education" >Education</h2>
+                <ul id="textstyle" style="margin: 3%;">
                     <li>Copper Hills High School <br/> 1997-2000</li>
                     <br/>
                     <li>Salt Lake Community College <br> 2022-currently attending <br/> Computer Science</li>
                 </ul>
-            <h2 id="workhistory;" style="margin-top: 10vh">Work History</h2>
+            </div>
+          </div>
+
+            <h2 id="workhistory">Work History</h2>
                 <br>
-                <ul>
+                <ul id="textstyle" style="margin: 3%;">
                     <li>Shriners Hospital For Children <br/>
                     www.shrinershospitalsforchildren.org <br/>
                     1275 E Fairfax Rd, Salt Lake City, UT 84103 <br/>
                     (801) 536-3500
                     </li>
-                    <p style="font-size:1em;">
-                     I worked as a CNA on the orthopedic unit and a PCA in the special care unit. My duties were to make sure the patients were comfortable; clean bed linens, food and water, monitor their pain level and report anything to the nurse on duty. I also monitored their vital signs
-                    </p>
+                      <p>
+                        I worked as a CNA on the orthopedic unit and a PCA in the special care unit. My duties were to make sure the patients were comfortable; clean bed linens, food and water, monitor their pain level and report anything to the nurse on duty. I also monitored their vital signs
+                      </p>
                     <br/>
                     <li>Done Service Group <br/>
                     541 Norfolk St, Aurora, CO 80011 <br/>
                     (303)747-4567
                     </li>
-                    <p style="font-size:1em;">
-                    I worked as a service plumber in commercial and residencial applications. I also worked as a drain tech.
-                    </p>
+                      <p>
+                        I worked as a service plumber in commercial and residencial applications. I also worked as a drain tech.
+                      </p>
                 </ul>
         </div>  <br><br>
-        <!--Table 
+        <!--Table ? 
         <div class="container-fluid" style="margin: 5em">
             <div class="row">
                 <div class="col">
@@ -124,7 +126,7 @@
                 </div>
             </div>
         </div>
-        ? -->
+         -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>          
 </body>
